--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="style.css" />
-        <!-- <script defer src="script.js"></script> -->
+        <script defer src="script.js"></script>
         <title>Dashboard</title>
     </head>
     <body>
